--- a/.github/workflows/jit.yml
+++ b/.github/workflows/jit.yml
@@ -1,7 +1,25 @@
 name: JIT
 on:
   pull_request:
+    paths:
+      - '**jit**'
+      - 'Python/bytecodes.c'
+      - 'Python/optimizer*.c'
+      - 'Python/executor_cases.c.h'
+      - 'Python/optimizer_cases.c.h'
+      - '!Python/perf_jit_trampoline.c'
+      - '!**/*.md'
+      - '!**/*.ini'
   push:
+    paths:
+      - '**jit**'
+      - 'Python/bytecodes.c'
+      - 'Python/optimizer*.c'
+      - 'Python/executor_cases.c.h'
+      - 'Python/optimizer_cases.c.h'
+      - '!Python/perf_jit_trampoline.c'
+      - '!**/*.md'
+      - '!**/*.ini'
   workflow_dispatch:
 
 permissions:
@@ -39,40 +57,40 @@ jobs:
       fail-fast: false
       matrix:
         target:
-          # - i686-pc-windows-msvc/msvc
-          # - x86_64-pc-windows-msvc/msvc
-          # - aarch64-pc-windows-msvc/msvc
+          - i686-pc-windows-msvc/msvc
+          - x86_64-pc-windows-msvc/msvc
+          - aarch64-pc-windows-msvc/msvc
           - x86_64-apple-darwin/clang
-          # - aarch64-apple-darwin/clang
-          # - x86_64-unknown-linux-gnu/gcc
-          # - aarch64-unknown-linux-gnu/gcc
+          - aarch64-apple-darwin/clang
+          - x86_64-unknown-linux-gnu/gcc
+          - aarch64-unknown-linux-gnu/gcc
         debug:
           - true
           - false
         llvm:
           - 19
         include:
-          # - target: i686-pc-windows-msvc/msvc
-          #   architecture: Win32
-          #   runner: windows-2022
-          # - target: x86_64-pc-windows-msvc/msvc
-          #   architecture: x64
-          #   runner: windows-2022
-          # - target: aarch64-pc-windows-msvc/msvc
-          #   architecture: ARM64
-          #   runner: windows-11-arm
+          - target: i686-pc-windows-msvc/msvc
+            architecture: Win32
+            runner: windows-latest
+          - target: x86_64-pc-windows-msvc/msvc
+            architecture: x64
+            runner: windows-latest
+          - target: aarch64-pc-windows-msvc/msvc
+            architecture: ARM64
+            runner: windows-11-arm
           - target: x86_64-apple-darwin/clang
             architecture: x86_64
+            runner: macos-13
+          - target: aarch64-apple-darwin/clang
+            architecture: aarch64
             runner: macos-14
-          # - target: aarch64-apple-darwin/clang
-          #   architecture: aarch64
-          #   runner: macos-14
-          # - target: x86_64-unknown-linux-gnu/gcc
-          #   architecture: x86_64
-          #   runner: ubuntu-24.04
-          # - target: aarch64-unknown-linux-gnu/gcc
-          #   architecture: aarch64
-          #   runner: ubuntu-24.04-arm
+          - target: x86_64-unknown-linux-gnu/gcc
+            architecture: x86_64
+            runner: ubuntu-24.04
+          - target: aarch64-unknown-linux-gnu/gcc
+            architecture: aarch64
+            runner: ubuntu-24.04-arm
     steps:
       - uses: actions/checkout@v4
         with:
@@ -82,12 +100,11 @@ jobs:
           python-version: '3.11'
 
       # PCbuild downloads LLVM automatically:
-      # - name: Windows
-      #   if: runner.os == 'Windows'
-      #   run: |
-      #     ./PCbuild/build.bat --experimental-jit ${{ matrix.debug && '-d' || '' }} -p ${{ matrix.architecture }}
-      #     ./PCbuild/rt.bat ${{ matrix.debug && '-d' || '' }} -p ${{ matrix.architecture }} \
-      #       -q --multiprocess 0 --timeout 4500 --verbose2 --verbose3
+      - name: Windows
+        if: runner.os == 'Windows'
+        run: |
+          ./PCbuild/build.bat --experimental-jit ${{ matrix.debug && '-d' || '' }} -p ${{ matrix.architecture }}
+          ./PCbuild/rt.bat ${{ matrix.debug && '-d' || '' }} -p ${{ matrix.architecture }} -q --multiprocess 0 --timeout 4500 --verbose2 --verbose3
 
       - name: macOS
         # The `find` line is required as a result of https://github.com/actions/runner-images/issues/9966.
@@ -109,14 +126,14 @@ jobs:
           arch -x86_64 make all --jobs 4
           ./python.exe -m test --multiprocess 0 --timeout 4500 --verbose2 --verbose3
 
-      # - name: Linux
-      #   if: runner.os == 'Linux'
-      #   run: |
-      #     sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)" ./llvm.sh ${{ matrix.llvm }}
-      #     export PATH="$(llvm-config-${{ matrix.llvm }} --bindir):$PATH"
-      #     ./configure --enable-experimental-jit ${{ matrix.debug && '--with-pydebug' || '' }}
-      #     make all --jobs 4
-      #     ./python -m test --multiprocess 0 --timeout 4500 --verbose2 --verbose3
+      - name: Linux
+        if: runner.os == 'Linux'
+        run: |
+          sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)" ./llvm.sh ${{ matrix.llvm }}
+          export PATH="$(llvm-config-${{ matrix.llvm }} --bindir):$PATH"
+          ./configure --enable-experimental-jit ${{ matrix.debug && '--with-pydebug' || '' }}
+          make all --jobs 4
+          ./python -m test --multiprocess 0 --timeout 4500 --verbose2 --verbose3
 
   no-opt-jit:
     name: JIT without optimizations (Debug)
