--- a/Makefile.pre.in
+++ b/Makefile.pre.in
@@ -3126,21 +3126,22 @@ JIT_DEPS = \
 		$(srcdir)/Tools/jit/*.py \
 		$(srcdir)/Python/executor_cases.c.h \
 		pyconfig.h
-		
+
+JIT_STENCIL_HEADER :=		
 ifneq ($(filter aarch64-apple-darwin%,$(HOST_GNU_TYPE)),)
-JIT_STENCIL_HEADER := jit_stencils-aarch64-apple-darwin.h
+JIT_STENCIL_HEADER = jit_stencils-aarch64-apple-darwin.h
 else ifneq ($(filter x86_64-apple-darwin%,$(HOST_GNU_TYPE)),)
-JIT_STENCIL_HEADER := jit_stencils-x86_64-apple-darwin.h
+JIT_STENCIL_HEADER = jit_stencils-x86_64-apple-darwin.h
 else ifeq ($(HOST_GNU_TYPE), aarch64-pc-windows-msvc)
-JIT_STENCIL_HEADER := jit_stencils-aarch64-pc-windows-msvc.h
+JIT_STENCIL_HEADER = jit_stencils-aarch64-pc-windows-msvc.h
 else ifeq ($(HOST_GNU_TYPE), i686-pc-windows-msvc)
-JIT_STENCIL_HEADER := jit_stencils-i686-pc-windows-msvc.h
+JIT_STENCIL_HEADER = jit_stencils-i686-pc-windows-msvc.h
 else ifeq ($(HOST_GNU_TYPE), x86_64-pc-windows-msvc)
-JIT_STENCIL_HEADER := jit_stencils-x86_64-pc-windows-msvc.h
+JIT_STENCIL_HEADER = jit_stencils-x86_64-pc-windows-msvc.h
 else ifneq ($(filter aarch64-%-linux-gnu,$(HOST_GNU_TYPE)),)
-JIT_STENCIL_HEADER := jit_stencils-$(HOST_GNU_TYPE).h
+JIT_STENCIL_HEADER = jit_stencils-$(HOST_GNU_TYPE).h
 else ifneq ($(filter x86_64-%-linux-gnu,$(HOST_GNU_TYPE)),)
-JIT_STENCIL_HEADER := jit_stencils-$(HOST_GNU_TYPE).h
+JIT_STENCIL_HEADER = jit_stencils-$(HOST_GNU_TYPE).h
 endif
 
 jit_stencils.h $(JIT_STENCIL_HEADER): $(JIT_DEPS)
