--- a/Makefile.pre.in
+++ b/Makefile.pre.in
@@ -3127,7 +3127,7 @@ JIT_DEPS = \
 		$(srcdir)/Python/executor_cases.c.h \
 		pyconfig.h
 
-@JIT_STENCILS_H@: $(JIT_DEPS)
+jit_stencils.h @JIT_STENCILS_H@: $(JIT_DEPS)
 	@REGEN_JIT_COMMAND@
 
 Python/jit.o: $(srcdir)/Python/jit.c jit_stencils.h @JIT_STENCILS_H@
