--- a/.github/workflows/jit.yml
+++ b/.github/workflows/jit.yml
@@ -79,9 +79,9 @@ jobs:
           - target: aarch64-pc-windows-msvc/msvc
             architecture: ARM64
             runner: windows-11-arm
-          - target: x86_64-apple-darwin-rosetta/clang
+          - target: x86_64-apple-darwin/clang
             architecture: x86_64
-            runner: macos-14
+            runner: macos-15-intel
           - target: aarch64-apple-darwin/clang
             architecture: aarch64
             runner: macos-14
@@ -122,13 +122,7 @@ jobs:
           export CFLAGS_JIT='-Werror=unguarded-availability'
           export MACOSX_DEPLOYMENT_TARGET=10.15
           ./configure --enable-experimental-jit --enable-universalsdk --with-universal-archs=universal2 ${{ matrix.debug && '--with-pydebug' || '' }}
-          # Use Rosetta for x86_64 builds on ARM runners because of
-          # the deprecation of x86_64 support for GitHub-hosted macOS runners
-          if [[ "${{ matrix.architecture }}" == "x86_64" && "$(uname -m)" == "arm64" ]]; then
-            arch -x86_64 make all --jobs 4
-          else
-            make all --jobs 4
-          fi
+          make all --jobs 4
           ./python.exe -m test --multiprocess 0 --timeout 4500 --verbose2 --verbose3
 
       - name: Linux
