--- a/Makefile.pre.in
+++ b/Makefile.pre.in
@@ -801,10 +801,10 @@ build_all:	check-clean-src check-app-store-compliance $(BUILDPYTHON) platform sh
 
 .PHONY: build_wasm
 build_wasm: check-clean-src $(BUILDPYTHON) platform sharedmods \
-		python-config checksharedmods
+		python-config checksharedmods build-details.json
 
 .PHONY: build_emscripten
-build_emscripten: build_wasm web_example web_example_pyrepl_jspi
+build_emscripten: build_wasm build-details.json web_example web_example_pyrepl_jspi
 
 # Check that the source is clean when building out of source.
 .PHONY: check-clean-src
