--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -95,26 +95,26 @@ repos:
     rev: v9.1.5
     hooks:
       - id: oxipng
-        args: [ "-o", "2", "--strip", "safe", "--alpha" ]
+        args: [--strip=safe, --alpha]
         exclude: |
           (?x)^(
-              PC/icons/[^/]*\.png|
               Android/testbed/app/src/main/res/drawable-xxhdpi/ic_launcher\.png|
-              Objects/object_layout_[^/]*\.png|
-              InternalDocs/images/python-cyclic-gc-[^/]*-new-page\.png|
               Doc/howto/logging_flow\.png|
+              Doc/library/hashlib-blake2-tree\.png|
+              Doc/library/kde_example\.png|
               Doc/library/pathlib-inheritance\.png|
               Doc/library/tk_msg\.png|
-              Doc/library/hashlib-blake2-tree\.png|
               Doc/library/turtle-star\.png|
-              Doc/library/kde_example\.png|
-              Doc/using/win_install[^/]*\.png|
               Doc/using/mac_installer_[^/]*\.png|
-              Tools/msi/bundle/SideBar\.png|
-              Lib/profiling/sampling/_assets/python-logo-only\.png|
-              Lib/test/tkinterdata/python\.png|
-              Lib/test/test_email/data/python\.png|
+              Doc/using/win_install[^/]*\.png|
+              InternalDocs/images/python-cyclic-gc-[^/]*-new-page\.png|
               Lib/idlelib/Icons/idle_[^/]*\.png|
+              Lib/profiling/sampling/_assets/python-logo-only\.png|
+              Lib/test/test_email/data/python\.png|
+              Lib/test/tkinterdata/python\.png|
+              Objects/object_layout_[^/]*\.png|
+              PC/icons/[^/]*\.png|
+              Tools/msi/bundle/SideBar\.png|
           )$
 
   - repo: local
