--- a/.github/workflows/jit.yml
+++ b/.github/workflows/jit.yml
@@ -108,8 +108,9 @@ jobs:
 
         # The `find` line is required as a result of https://github.com/actions/runner-images/issues/9966.
         # This is a bug in the macOS runner image where the pre-installed Python is installed in the same
-        # directory as the Homebrew Python, which causes the build to fail for macos-13. This line removes
-        # the symlink to the pre-installed Python so that the Homebrew Python is used instead.
+        # directory as the Homebrew Python, which causes the build to fail for macos-15
+        # (was 13, see if bug still exists?) This line removes the symlink to the pre-installed Python so
+        # that the Homebrew Python is used instead.
       - name: macOS
         if: runner.os == 'macOS'
         run: |
