--- a/.github/workflows/tail-call.yml
+++ b/.github/workflows/tail-call.yml
@@ -58,7 +58,7 @@ jobs:
 #            runner: windows-2022
           - target: x86_64-apple-darwin/clang
             architecture: x86_64
-            runner: macos-15
+            runner: macos-15-intel
           - target: aarch64-apple-darwin/clang
             architecture: aarch64
             runner: macos-14
