--- a/.github/actionlint.yaml
+++ b/.github/actionlint.yaml
@@ -1,5 +1,6 @@
 self-hosted-runner:
   # Pending https://github.com/rhysd/actionlint/issues/533
+  # and https://github.com/rhysd/actionlint/issues/571
   labels: ["windows-11-arm", "macos-15-intel"]
 
 config-variables: null
